@@ -370,8 +370,8 @@ Apache License 2.0
 
 --------------------------------------------------------------------
 Dependency: github.com/elastic/gosigar
-Version: v0.6.0
-Revision: 5cb8fed1ceb7f0fd69e4ad61c715a80601dddfd2
+Version: v0.7.0
+Revision: cdcbd8c3b8bf28ef6d8639ec1e45bf31d2745f2d
 License type (autodetected): Apache-2.0
 ./vendor/github.com/elastic/gosigar/LICENSE:
 --------------------------------------------------------------------
